================================================================================
Changes since v12.03
================================================================================

--------------------------------------------------------------------------------
basic


--------------------------------------------------------------------------------
basicGL


--------------------------------------------------------------------------------
dis


--------------------------------------------------------------------------------
simulation

Navigation class
   1) Fixed bug in calculating navigation UTC time



--------------------------------------------------------------------------------
